# QualityDataModellPython

./: .gitignore  Dockerfile  KMGdata_to_QualityData.py  README.md  docker-compose.yaml  einfacherTestToServer.py  model3.json  postRequest.py  procedure.py  pyproject.toml  qualityData.py  qualityLogic.py  simple_aas_and_submodels.json  startAPI.py  start_api.py  test123.py  testExample.py  testPOSTrequest.py  testProcedure.py  testQualityData.py  testStartAPI.py  testToServer.py  testUmwandlungJSON.py  testestProzedur.py  txtEinlesen.py
aas2openapi-client/: 0574_selected_features.json  ClientTestFile.py  KMGdata_to_QualityData_client.py  PruefplanValidierungsbauteil1_16.txt  PruefplanValidierungsbauteil1_17.txt  README.md  convert_kmg_data.py  json_procedure.py  new_results_test.py  postClient.py  post_aas_put_kmg_sensor_data_test.py  put_client.py  put_client_procedure.py  put_client_put_KMG_data_test.py  put_client_put_new_results_test.py  pyproject.toml
aas2openapi-client/aas2openapi_client/: __init__.py  client.py
aas2openapi/client/: aas_client.py  submodel_client.py
models/: procedure.py  process.py  processAttributes.py  process_attributes.py  process_model.py  product.py  production_times.py  quality.py  qualityDataListen.py  resource.py
services/: 10785.json  KMGdata_to_QualityData.py  convert_timestamp_in_str.py  id_generator.py  quality_logic.py  read_json.py  set_warning_control_limit.py  testJSONeinlesen.py
services/tpwbk/: ML_Data_Preprocessing.py  anomaly_detection.py  data_analysis.py  downsampling.py  feature_extraction.py  feature_selection.py  (+3 more)
(+60 files in other folders)
